[metadata]
name = pbrdemo
author = wanghuiict
author-email = wanghuiict@gmail.com
summary = test OpenStack pbr
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://launchpad.net/pbr
project_urls =
    Bug Tracker = https://bugs.launchpad.net/pbr/
    Documentation = https://docs.openstack.org/pbr/
    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    pbrdemo
data_files =
    etc/pbr = etc/*
    etc/init =
        pbr.packaging.conf
        pbr.version.conf

[entry_points]
console_scripts =
    pbrdemo = cmd.main:main

