[metadata]
name = pbrdemo
author = wanghuiict
author-email = wanghuiict@gmail.com
summary = test OpenStack pbr
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/wanghuiict/pbr-test
project_urls =
    Bug Tracker = https://github.com/wanghuiict/pbr-test
    Documentation = https://github.com/wanghuiict/pbr-test
    Source Code = https://github.com/wanghuiict/pbr-test
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    pbrdemo

[entry_points]
console_scripts =
    pbrdemo = pbrdemo.cmd.main:main

test_1 =
    testfun1 = pbrdemo.a:func1
